+ check token
