# settings/swagger.yaml
@@ -518,6 +518,18 @@ paths:
               schema:
                 $ref: '#/components/schemas/token'
 
+  /auth/check_token:
+    post:
+      summary: "check jwt token"
+      security:
+        - bearerAuth: []      
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/check_token'                
+
   /auth/send_confirm:
     put:
       summary: "get confirm email"
@@ -763,6 +775,7 @@ components:
                 attributes:
                   email: "test@test.com"
                   password: "password"
+
   schemas:
     ico:
       properties:
@@ -971,3 +984,11 @@ components:
           attributes:
             value: "token value"
             role: "user role"
+    
+    check_token:
+      type: string
+      example:
+        data:
+          type: "role"
+          attributes:
+            value: "role value"
